# hymen

./: .gitignore  README.md  app.py  pyproject.toml
scrapy/.scrapy/httpcache/finos/d2/d28b0be817f4f48bc3b11bafd80e36aab2eb1d09/: meta  pickled_meta  response_body  response_headers
scrapy/.scrapy/httpcache/finos/f6/f6fa82483371ec08642db50127012261cdf24510/: meta  pickled_meta  response_body  response_headers
scrapy/spiders/: settings.py
scrapy/spiders/spiders/: finos.py  schema.py
